--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p {
 .footer-content {
     background-color: black;
     text-align: center;
+    padding: 10px;
 }
 ul{
     list-style: none;
@@ -129,3 +130,14 @@ nav{
     margin-right: 10px;
     float: right;
 }
+.naby {
+    width: 1350px;
+    height: 560px;
+  }
+  
+  .naby img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
